--- a/ios/igniteshoes/Info.plist
+++ b/ios/igniteshoes/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>igniteshoesapp</string>
+    <string>igniteshoes</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -27,7 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.rocketseat.igniteshoesapp</string>
+          <string>com.rocketseat.igniteshoes</string>
         </array>
       </dict>
     </array>
